--- a/app/globals.css
+++ b/app/globals.css
@@ -1,26 +1,18 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+input:focus{
+border : solid 1.5px rgb(0, 180, 180);
+background-color:rgba(0, 180, 180, 25%);
+transition : 0.5s ease-in-out;
+
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+input:focus ~ label{
+  background-color: rgb(0, 180, 180);
+  color : white;
+  transition : 0.5s ease-in-out;
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-}
