--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 
-
 input:focus{
 border : solid 1.5px rgb(0, 180, 180);
 background-color:rgba(0, 180, 180, 25%);
@@ -16,3 +15,33 @@ input:focus ~ label{
 }
 
 
+#navelem{
+width : 150px; 
+text-align:center;
+position : relative;
+width : calc(100 + 25px);
+color :rgb(236, 72, 153);
+}
+
+#navelem:hover{
+color : white;
+transition : color 0.5s ease-in-out;
+
+}
+
+#navelem::before{
+  position : absolute;
+  content:"";
+  height : 0px;
+  background-color : rgb(236, 72, 153);
+  width : 0px;
+  bottom:-8;
+  left:50%;
+  transition : 0.5s ease-in-out;
+}
+
+#navelem:hover::before{
+  width : 100%;
+  height : 2px;
+  left:0px;
+}
